--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "json-server": "json-server --watch db.json --port 3001"
+    "start": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
@@ -33,8 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "json-server": "^1.0.0-alpha.23"
   }
 }
